--- a/data/style/open.css
+++ b/data/style/open.css
@@ -46,7 +46,9 @@
     animation-duration: 2s;
     animation-name: slidein;
   }
-  
+  .introduce_mobile{
+    display: none;
+  }
   .exhibi {
     line-height: 4vh;
         margin-top: 4rem;
@@ -121,18 +123,7 @@
   .letter-front__Middle {
     margin: 6vh 0;
   }
-  .letter-front__blur {
-    opacity: 100%;
-    filter: blur(0px);
-    -webkit-filter: blur(0px);
-    transition: all 1s;
-  }
-  .letter-front__blur:hover {
-    opacity: 0%;
-    filter: blur(6px);
-    -webkit-filter: blur(6px);
-    transition: all 1s ease-in-out;
-  }
+  
 }
 @media screen and (max-width: 480px) {
   html,
@@ -161,27 +152,50 @@
   .height_ {
     justify-content: center;
     display: flex;
+    height: 22vw;
+  }
+  
+  .letter-front__Top {
+    margin-top: 40px;
+    margin-left: 20px;
+  }
+  .letter-front__MORY {
+    margin-left: 0px;
+  }
+  .letter-front__RY {
+    margin-left: 30px;
+  }
+  .letter-front__MEMORY {
+    margin-left: 20px;
   }
   .letter-front__Middle {
-    margin: 2rem 0;
+    margin: 2vh 0;
   }
   .letter-front {
     pointer-events: none;
     flex-basis: auto;
-    width: 100%;
-    height: 10vh;
+    height: 20vw;
   }
   .introduce {
+    display: none;
+  }
+  .introduce_mobile{
     font-size: 1rem;
+    animation-duration: 1.5s;
+    animation-name: slidein;
   }
   .exhibi {
     margin-top: 3rem;
     font-size: 1.1rem;
+    animation-duration: 2.5s;
+    animation-name: slidein;
   }
   .open-web {
     font-size: 2.8rem;
     line-height: 3.3rem;
     margin-top: 0.5rem;
+    animation-duration: 3.0s;
+    animation-name: slidein;
   }
   .bolder {
     font-weight: bolder;
@@ -190,10 +204,26 @@
   .open_information {
     margin-top: 3rem;
     text-align: right;
+    animation-duration: 3.5s;
+    animation-name: slideinR;
   }
   .opening-time {
+    animation-duration: 3.5s;
+    animation-name: slideinR;
     font-size: 1rem;
   }
+}
+.letter-front__blur {
+  opacity: 100%;
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  transition: all 1s;
+}
+.letter-front__blur:hover {
+  opacity: 0%;
+  filter: blur(6px);
+  -webkit-filter: blur(6px);
+  transition: all 1s ease-in-out;
 }
 @keyframes slidein {
     from {
@@ -204,6 +234,17 @@
     to {
         opacity: 100%;
       margin-left: 0%;
+    }
+  }
+  @keyframes slideinR {
+    from {
+      opacity: 0%;
+      margin-right: 10%;
+    }
+  
+    to {
+        opacity: 100%;
+      margin-right: 0%;
     }
   }
 @keyframes slidein2 {
